--- a/src/components/CalcDisplay.css
+++ b/src/components/CalcDisplay.css
@@ -9,7 +9,8 @@
     background-color: #2d2d86;
     color: #b3b3e6;
     font-size: 2.25em;
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    padding: 5px 1px 50px 0px solid #2d2d86;
     text-decoration: none;
     overflow-wrap: break-word;
 }
